--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,17 @@ on:
     branches: [ master ]
 
 jobs:
-
   build:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
+    - name: Log into registry
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ secrets.DOCKER_REGISTRY_URL }} -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag grpcdemo:$(date +%s)
+      run: |
+        VERSION=$(date +%s)
+        docker build . --file Dockerfile --tag grpcdemo:$VERSION
+    - name: Push the Docker image
+      run: docker push grpcdemo:$VERSION
