--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,11 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Log into registry
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ secrets.DOCKER_REGISTRY_URL }} -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
     - name: Build the Docker image
       run: |
         VERSION=$(date +%s)
-        docker build . --file Dockerfile --tag grpcdemo:$VERSION
+        docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}grpcdemo:$VERSION
+    - name: Log into registry
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ secrets.DOCKER_REGISTRY_URL }} -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
     - name: Push the Docker image
-      run: docker push grpcdemo:$VERSION
+      run: docker push ${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.DOCKER_USERNAME }}/grpcdemo:$VERSION
