--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,6 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ secrets.DOCKER_REGISTRY_URL }} -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
     - name: Build the Docker image
       run: |
-        VERSION=$(date +%s)
+        VERSION=latest
         docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/grpcdemo:$VERSION
         docker push ${{ secrets.DOCKER_USERNAME }}/grpcdemo:$VERSION
